scrollbar fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,6 +154,7 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+		scrollbar-gutter: stable;
 	}
 
 	*, *:before, *:after {
